// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TopLanguagesHistorical when data is loaded renders a component with data loaded 1`] = `
<DocumentFragment>
  <div
    class="chart__title"
  >
    <a
      href="/definitions#dimension_language"
    >
      Languages
    </a>
  </div>
  <figure
    id="chart_top-languages"
  >
    <div
      class="data chart__bar-chart text--capitalize"
    >
      <div
        class="chart__bar-chart__item"
      >
        <div
          class="chart__bar-chart__item__label text--overflow-ellipsis text--wrap"
        >
          English
        </div>
        <div
          class="chart__bar-chart__item__value"
        >
          91.2%
        </div>
        <div
          class="chart__bar-chart__item__bar"
          style="width: 91%;"
        />
      </div>
      <div
        class="chart__bar-chart__item"
      >
        <div
          class="chart__bar-chart__item__label text--overflow-ellipsis text--wrap"
        >
          Spanish
        </div>
        <div
          class="chart__bar-chart__item__value"
        >
          5.3%
        </div>
        <div
          class="chart__bar-chart__item__bar"
          style="width: 5%;"
        />
      </div>
      <div
        class="chart__bar-chart__item"
      >
        <div
          class="chart__bar-chart__item__label text--overflow-ellipsis text--wrap"
        >
          Chinese
        </div>
        <div
          class="chart__bar-chart__item__value"
        >
          0.9%
        </div>
        <div
          class="chart__bar-chart__item__bar"
          style="width: 1%;"
        />
      </div>
      <div
        class="chart__bar-chart__item"
      >
        <div
          class="chart__bar-chart__item__label text--overflow-ellipsis text--wrap"
        >
          French
        </div>
        <div
          class="chart__bar-chart__item__value"
        >
          0.5%
        </div>
        <div
          class="chart__bar-chart__item__bar"
          style="width: 0%;"
        />
      </div>
      <div
        class="chart__bar-chart__item"
      >
        <div
          class="chart__bar-chart__item__label text--overflow-ellipsis text--wrap"
        >
          Japanese
        </div>
        <div
          class="chart__bar-chart__item__value"
        >
          0.2%
        </div>
        <div
          class="chart__bar-chart__item__bar"
          style="width: 0%;"
        />
      </div>
      <div
        class="chart__bar-chart__item"
      >
        <div
          class="chart__bar-chart__item__label text--overflow-ellipsis text--wrap"
        >
          Portuguese
        </div>
        <div
          class="chart__bar-chart__item__value"
        >
          0.3%
        </div>
        <div
          class="chart__bar-chart__item__bar"
          style="width: 0%;"
        />
      </div>
      <div
        class="chart__bar-chart__item"
      >
        <div
          class="chart__bar-chart__item__label text--overflow-ellipsis text--wrap"
        >
          German
        </div>
        <div
          class="chart__bar-chart__item__value"
        >
          0.3%
        </div>
        <div
          class="chart__bar-chart__item__bar"
          style="width: 0%;"
        />
      </div>
      <div
        class="chart__bar-chart__item"
      >
        <div
          class="chart__bar-chart__item__label text--overflow-ellipsis text--wrap"
        >
          Italian
        </div>
        <div
          class="chart__bar-chart__item__value"
        >
          0.2%
        </div>
        <div
          class="chart__bar-chart__item__bar"
          style="width: 0%;"
        />
      </div>
      <div
        class="chart__bar-chart__item"
      >
        <div
          class="chart__bar-chart__item__label text--overflow-ellipsis text--wrap"
        >
          Korean
        </div>
        <div
          class="chart__bar-chart__item__value"
        >
          0.2%
        </div>
        <div
          class="chart__bar-chart__item__bar"
          style="width: 0%;"
        />
      </div>
      <div
        class="chart__bar-chart__item"
      >
        <div
          class="chart__bar-chart__item__label text--overflow-ellipsis text--wrap"
        >
          Russian
        </div>
        <div
          class="chart__bar-chart__item__value"
        >
          0.2%
        </div>
        <div
          class="chart__bar-chart__item__bar"
          style="width: 0%;"
        />
      </div>
    </div>
  </figure>
</DocumentFragment>
`;

exports[`TopLanguagesHistorical when data is not loaded renders a component in loading state 1`] = `
<DocumentFragment>
  <div
    class="chart__title"
  >
    <a
      href="/definitions#dimension_language"
    >
      Languages
    </a>
  </div>
  <figure
    id="chart_top-languages"
  >
    <div
      class="data chart__bar-chart text--capitalize"
    />
  </figure>
</DocumentFragment>
`;

exports[`TopLanguagesHistorical when data loading has an error renders a component in error state 1`] = `
<DocumentFragment>
  <div
    class="chart__title"
  >
    <a
      href="/definitions#dimension_language"
    >
      Languages
    </a>
  </div>
  <figure
    id="chart_top-languages"
  >
    <div
      class="data chart__bar-chart text--capitalize"
    />
  </figure>
</DocumentFragment>
`;
